Complete first section, add second section

--- a/law/Info.plist
+++ b/law/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Это нужно, чтобы сделать фотографию документа</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Это нужно, чтобы выбрать документ из галереи</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
